--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "gulp": "^4.0.2",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
+    "gulp-uglify": "^3.0.2",
     "sass": "^1.68.0"
   },
   "name": "modulo_21_disney_plus",
